# ev_load_fc

./: .gitignore  LICENSE  Makefile  README.md  main.py  mlflow.db  pyproject.toml  recursive_forecast.csv  run_mflow_ui.txt
.claude/: settings.local.json
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
configs/: config.yaml  detrend_params.csv
notebooks/: 01_EV_EDA.ipynb  02_weather_EDA.ipynb  03_traffic_EDA.ipynb  04_time_series_analysis.ipynb  05_feature_engineering.ipynb  06_baseline_models.ipynb  07_model_testing.ipynb  08_inference_testing.ipynb  99_test.ipynb  check.ipynb  mlflow.db  test.ipynb
scripts/: 01_filter_raw.py  02_clean_enrich_split.py  03_features.py  04_model_training.py  04_training.py  filter_raw.py  inference.py  run_enrichment.py  run_extraction.py  run_features.py  run_inference.py  run_training.py
src/ev_load_fc/: __init__.py  config.py  test.py
src/ev_load_fc/data/: analysis.py  loading.py  preprocessing.py
src/ev_load_fc/features/: feature_creation.py  feature_selection.py  features.py
src/ev_load_fc/inference/: forecast.py  inference.py
src/ev_load_fc/pipelines/: feature_pipeline.py  inference_pipeline.py  loading_pipeline.py  preprocessing_pipeline.py  training_pipeline.py
src/ev_load_fc/preprocessing/: analysis.py  loading.py  preprocessing.py
src/ev_load_fc/training/: evaluation.py  mlflow_api.py  optuna_api.py  prophet_api.py  registry.py
src/ev_load_fc/utils/: logging.py  paths.py
streamlit_app/: Home.py  requirements.txt
streamlit_app/pages/: 1_Project_Overview.py  2_Data_EDA.py  3_Model_Comparison.py  4_Forecast_Results.py
streamlit_app/utils/: charts.py  data_loader.py  mlflow_client.py
tests/: conftest.py  test_charts.py  test_data_loader.py  test_enrichment.py  test_extraction.py  test_features.py  test_inference_pipeline.py  test_inference_pipeline_prophet.py  test_inference_script.py  test_mlflow_api_prophet.py  test_mlflow_client.py  test_optuna_api.py  test_prophet_api.py  test_prophet_forecast.py  test_training.py
